--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 <nav class="nav">
     <a href="#" class="logo">NK<span>ONVERT</span></a>
     <div class="menu-links">
-        <a href="\bonvoi\templates/motivation.html"><i class="fa fa-lightbulb"></i> Motivation</a>
-        <a href="zip\templates/index.html"><i class="fa fa-file-zipper"></i> Compresser ZIP</a>
+        <a href="#"><i class="fa fa-lightbulb"></i> Motivation</a>
+        <a href="#"><i class="fa fa-file-zipper"></i> Compresser ZIP</a>
     </div>
 </nav>
 
 <div class="hero">
-    <h1>Le Convertisseur by NKALAA Tout-en-Un</h1>
-    <p>PDF, Word et Images transformés instantanément .</p>
+    <h1>Le Convertisseur Tout-en-Un</h1>
+    <p>PDF, Word et Images transformés instantanément sans PHP.</p>
 </div>
 
 <div class="container">
