--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 </nav>
 
 <div class="hero">
-    <h1>Le Convertisseur Tout-en-Un</h1>
-    <p>PDF, Word et Images transformés instantanément sans PHP.</p>
+    <h1>Le Convertisseur Tout-en-Un By Nkalaa</h1>
+    <p>PDF, Word et Images transformés instantanément </p>
 </div>
 
 <div class="container">
@@ -131,3 +131,4 @@
 </script>
 </body>
 </html>
+
